--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "start": "node dist/say.js"
   },
   "devDependencies": {
+    "@tapjs/tsx": "^1.1.18",
     "rimraf": "^5.0.5",
     "tap": "^18.6.1",
     "ts-node": "^10.9.2",
     "tsimp": "^2.0.10",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
+  },
+  "tap": {
+    "plugin": [
+      "!@tapjs/typescript",
+      "@tapjs/tsx"
+    ]
   }
 }
